add indexes, fix swagger, routing
