# internal/domain/dto/storage/review.go
@@ -1,9 +1,10 @@
 package storage
 
 type Review struct {
-	ID          int32  `json:"id"`
-	GameID      int32  `json:"gameid"`
-	Description string `json:"description"`
-	PlayTime    int32  `json:"playtime"`
-	Rate        int8   `json:"rate"`
+	ID          int32  `gorm:"primaryKey;autoIncrement:true" json:"id"`
+	GameID      int32  `gorm:"index:idx_gameid,unique" json:"gameid"`
+	Description string `gorm:"not null" json:"description"`
+	PlayTime    int32  `gorm:"not null" json:"playtime"`
+	PlayMinutes int32  `gorm:"not null" json:"playminutes"`
+	Rate        int8   `gorm:"not null" json:"rate"`
 }
